[package]
name = "rustyninja"
version = "0.0.1"
authors = ["Anders Kusk <a@resec.dk"]
homepage = "https://github.com/kusk/rustyninja"

[dependencies]
ntfs = "0.4.0"
time = { version = "0.3.9", features = ["large-dates", "macros"], default-features = false, optional = true }
rand = "0.8.4"
anyhow = "1.0"

